After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742289 - deploy: Actually copy xattrs of modified config files
deploy: Actually copy xattrs of modified config files
Status: RESOLVED FIXED
Product: ostree
Classification: Infrastructure
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: OSTree maintainer(s)
OSTree maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-01-04 01:12 UTC by Colin Walters
Modified: 2015-01-06 16:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
deploy: Actually copy xattrs of modified config files (1.76 KB, patch)
2015-01-04 01:12 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2015-01-04 01:12:02 UTC
Regression from 7b01bd2e4333d4346dd08e0b5caf672f56b1ccfd
where we stopped using g_file_copy() - we lost copying xattrs.

This specifically breaks /etc/shadow SELinux labeling, with the
obvious bad consequences.
Comment 1 Colin Walters 2015-01-04 01:12:04 UTC
Created attachment 293685 [details] [review]
deploy: Actually copy xattrs of modified config files
Comment 2 Matthew Barnes 2015-01-05 15:39:48 UTC
Review of attachment 293685 [details] [review]:

Changes look okay.  Slightly worried this could be forgotten again in the future.  Perhaps some fd-based equivalent to g_file_copy() (and all of its conveniences) might be helpful in libotutil or libgsystem.
Comment 3 Colin Walters 2015-01-06 15:48:13 UTC
Definitely agree wrt the g_file_copy() equiv.  For one thing, we're missing out on the BTRFS reflink that gio supports ( https://bugzilla.gnome.org/show_bug.cgi?id=626497 )

One initial goal I had with libgsystem is to be a "proving ground" for low level things that could migrate into gio.  However, `*at()` in GIO is not easy.  I need to write up my thoughts somewhere...
Comment 4 Colin Walters 2015-01-06 16:17:13 UTC
Attachment 293685 [details] pushed as 01f6d68 - deploy: Actually copy xattrs of modified config files